fixed create playlist form gap

--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -127,6 +127,10 @@ form {
     box-shadow: 0px 0px 10px 2px #586e75;
 }
 
+form#SongsForm {
+    gap: 0.3em;
+}
+
 .hidden {
     display: none;
 }
